Current:
  * wxMaxima now uses C++11 that makes the code more readable and helps with
	finding bugs
  * Many small bug fixes in various places
  * Increased the speed of the program again
  * Opening the config dialogue since 19.11.0 unchecked "offer known answers"

19.11.1:
  * Improved italian translation by Marco Ciampa
  * Autocompletion no more causes asserts
  * A better logic that decides which cell to send to maxima
  * wxMaxima now supports "-l", "-u" and "-X" command-line args like maxima
  * The help files now are installed in the Right Place
  * Many additional small bug fixes

19.11.0:
  * Chinese translation updates from liulitchi
  * Turkish translation updates from TufanSirin
  * Hungarian translation updates from Blahota István
  * German translation updates from Wolfgang Dautermann and Gunter Königsmann
  * Better detection of the Gnuplot location
  * Better detection of the right place to open autocomplete popups in
  * Better formatting of special unicode operators
  * If autosave on closing fails: Allow the user to ask to exit anyway
  * Enable Autosave even if the option to keep the file saved is disabled
  * A context menu with the "display labels" choices
  * A context menu with "max number of digits" choices
  * A speedup by preventing recursive calls to resize functions
  * Corrected parametric plots in the plot wizard
  * A command-line switch that copies all log messages to stderr.
  * Batch mode no more adds documents to "recent documents".
  * For purists: A "don't offer known answers" config option.
  * Now some toolbar items can be disabled.
  * Added more toolbar buttons that evaluate cells.
  * Many additional bug fixes

19.10.0:
  * Corrected a Regression: The better display of exponents failed for exp(x^2).
  * Seems like some Windows computers only have a numpad enter key.
  * Chinese translation updates from liulitchi.
  * Russian translation updates from OlesyaGerasimenko.

19.09.1: