@@ -4,6 +4,7 @@ Current:
   * Many small bug fixes in various places
   * Increased the speed of the program again
   * Opening the config dialogue since 19.11.0 unchecked "offer known answers"
+  * For Cmake>=3.10.0 the build system now supports cppcheck.
 
 19.11.1:
   * Improved italian translation by Marco Ciampa
